crates/descar-core/tests/snapshots/type_checker_snapshot_tests__type_of_number_scientific32.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.type_of_number(&Number::Scientific32(1.0e2, 2))"
---
F32
