crates/descar-core/tests/snapshots/type_checker_snapshot_tests__type_of_number_scientific64.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.type_of_number(&Number::Scientific64(1.0e2, 2))"
---
F64
