crates/descar-core/tests/snapshots/type_checker_snapshot_tests__type_of_number_u32.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.type_of_number(&Number::U32(0))"
---
U32
