crates/descar-core/tests/snapshots/type_checker_snapshot_tests__type_of_number_u8.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.type_of_number(&Number::U8(0))"
---
U8
