crates/descar-core/tests/snapshots/type_checker_snapshot_tests__type_of_number_unsigned_integer.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.type_of_number(&Number::UnsignedInteger(42))"
---
U64
