crates/descar-core/tests/snapshots/type_checker_snapshot_tests__unary_negate_invalid.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2018,
        ),
        message: "Negation requires numeric type operand, found bool",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 1,
                column: 2,
                offset: 1,
                index: 1,
                utf8_offset: 1,
                code_point_offset: 1,
            },
            end: SourceLocation {
                line: 1,
                column: 6,
                offset: 5,
                index: 5,
                utf8_offset: 5,
                code_point_offset: 5,
            },
        },
        help: None,
    },
]
